# drone_brains_csunAero2026

./: .README  .gitignore  CMakeLists.txt  README.md  sdkconfig.old
main/: CMakeLists.txt  common.c  common.h  console.txt  drone_brains_csunAero2026.c  drone_brains_csunAero2026.h  idf_component.yml
main/nec_ir/: ir_nec_encoder.c  ir_nec_encoder.h
main/tasks/: gate_controller.c  gate_controller.h  ir_controller.c  ir_controller.h  uart_receiver.c  uart_receiver.h  uart_sender.c  uart_sender.h
